# mcptools

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
examples/: claude_desktop_config.json
mcptools/: __init__.py  config.py  server.py
mcptools/prompts/: analysis.py
mcptools/resources/: market.py
mcptools/tools/: company.py  news.py  stocks.py
tests/: test_news.py  test_server.py  test_stocks.py
